<resources>
    <string name="app_name">MenuApp</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="lunch">LUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="set_menu">Set Menu</string>
    <string name="edit_breakfast">Enter the menu for breakfast</string>
    <string name="edit_lunch">Enter the menu for lunch</string>
    <string name="edit_dinner">Enter the menu for dinner</string>
    <string name="update">Update</string>
    <string name="display_menu">Display Menu</string>
    <string name="display_breakfast">TextView</string>
    <string name="change">change</string>
</resources>
